# ChessRL

./: README.md  pyproject.toml
chessrl/: agent.py  env.py  model.py  ppo.py  trainer.py
notebooks/: Untitled.ipynb
