[tool.poetry]
name = "chessrl"
version = "0.1.0"
description = ""
authors = ["Erik Gafni <egafni@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
gym-chess = {git = "https://github.com/genyrosk/gym-chess"}
pytorch = "^1.0.2"
torchvision = "^0.10.0"
numpy = "^1.21.1"
tqdm = "jupyter"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
