[tool.poetry]
name = "chessrl"
version = "0.1.0"
description = ""
authors = ["Erik Gafni <egafni@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
gym-chess = {git = "https://github.com/genyrosk/gym-chess"}
torchvision = "^0.10.0"
numpy = "^1.21.1"
tqdm = "jupyter"
chess = "^1.6.1"
jupyterlab = "^3.0.16"
gym = "^0.18.3"
black = "^21.7b0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
